# anti-wordly

./: .prospector.yml  README.md  pyproject.toml
src/anti_wordly/: cli.py  dictionary.py  test_dictionary.py  test_utils.py  test_wordly.py  utils.py  wordly.py
src/anti_wordly/api/v1/: app.py
