[tool.poetry]
name = "anti-wordly"
version = "0.1.0"
description = "Service for solving Wordly puzzles"
authors = ["Dmitry S <sda97g@gmail.com>"]
readme = "README.md"
packages = [{include = "anti_wordly", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
prospector = {extras = ["with-everything"], version = "^1.10.2"}
wrapt = "^1.15.0"
dill = "^0.3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
